AARCH64: wrong encoding for SIMD instructions zip, trn, uzp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 10
    • Component/s: hotspot
    • b14
    • aarch64

        zip2, trn1, trn2, uzp1, uzp2 are incorrectly encoded as zip1.
        There seems to be no code, which use these instructions so far.
        However, creating new code with these instructions is blocked by this bug

              Assignee:
              Dmitrij Pochepko
              Reporter:
              Dmitrij Pochepko
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: