8202395: AARCH64: wrong encoding for SIMD instructions zip, trn, uzp

Reviewed-by: aph